--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
             This element test for "text-bp5-text-selection-color".
         </div>
         <div class="shadow-bp5-elevation-2">This element tests for "shadow-bp5-elevation-2".</div>
-        <div class="shadow-bp5-elevation-0 hover:shadow-bp5-elevation-4 transition-all ease-bp5">
+        <div class="shadow-bp5-elevation-0 hover:shadow-bp5-elevation-4 ease-bp5 transition-all">
             This element tests for "shadow-bp5-elevation-0 hover:shadow-bp5-elevation-4
             transition-all bp5-ease".
         </div>
