Update test for tailwind v4

--- a/test/index.html
+++ b/test/index.html
@@ -1,23 +1,38 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link href="output.css" rel="stylesheet" />
-    </head>
-    <body class="font-bp5-sans">
-        <div>This document uses "font-bp5-sans".</div>
-        <div class="text-bp5-text-color">This element tests for "text-bp5-text-color".</div>
-        <div class="bg-bp5-app-background-color">
-            This element tests for "bg-bp5-app-background-color".
-        </div>
-        <div class="bg-bp5-text-selection-color">
-            This element test for "text-bp5-text-selection-color".
-        </div>
-        <div class="shadow-bp5-elevation-2">This element tests for "shadow-bp5-elevation-2".</div>
-        <div class="shadow-bp5-elevation-0 hover:shadow-bp5-elevation-4 ease-bp5 transition-all">
-            This element tests for "shadow-bp5-elevation-0 hover:shadow-bp5-elevation-4
-            transition-all bp5-ease".
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Document</title>
+    <link
+      href="output.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="font-bp5-sans gap-bp5-grid-2 p-bp5-grid-3 flex flex-col">
+    <div>
+      This document uses "font-bp5-sans gap-bp5-grid-2 p-bp5-grid-3 flex
+      flex-col".
+    </div>
+    <div class="bg-bp5-text-color text-bp5-white">
+      This element tests for "bg-bp5-text-color text-bp5-white".
+    </div>
+    <div class="bg-bp5-app-background-color">
+      This element tests for "bg-bp5-app-background-color".
+    </div>
+    <div class="bg-bp5-text-selection-color">
+      This element test for "bg-bp5-text-selection-color".
+    </div>
+    <div class="shadow-bp5-elevation-2">
+      This element tests for "shadow-bp5-elevation-2".
+    </div>
+    <div
+      class="shadow-bp5-elevation-0 hover:shadow-bp5-elevation-4 ease-bp5 transition-all"
+    >
+      This element tests for "shadow-bp5-elevation-0
+      hover:shadow-bp5-elevation-4 ease-bp5 transition-all".
+    </div>
+  </body>
 </html>
